samples/_failures_safe/1761507899_8c5e21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4b6dece.c: In function ‘main’:
./samples/SAFE/__tmp_e4b6dece.c:158:21: error: expected ‘)’ at end of input
  158 |         if (show_all
      |            ~        ^
      |                     )
./samples/SAFE/__tmp_e4b6dece.c:158:9: error: expected declaration or statement at end of input
  158 |         if (show_all
      |         ^~
./samples/SAFE/__tmp_e4b6dece.c:158:9: error: expected declaration or statement at end of input
